@@ -41,7 +41,14 @@ $TCA['tt_content']['types']['list']['subtypes_excludelist'][$_EXTKEY . '_pi_sear
 
    # ----- # ----- # ----- # ----- # ----- # ----- # ----- # ----- # ----- #
 
+	// TypoScript
 t3lib_extMgm::addStaticFile($_EXTKEY, 'static/solr/', 'Apache Solr');
+
+	// Examples
+t3lib_extMgm::addStaticFile($_EXTKEY, 'static/examples/everything-on/', 'Apache Solr Example - Everything On');
+t3lib_extMgm::addStaticFile($_EXTKEY, 'static/examples/filter-pages/', 'Apache Solr Example - Filter to only show page results');
+t3lib_extMgm::addStaticFile($_EXTKEY, 'static/examples/indexqueue-ttnews/', 'Apache Solr Example - Index Queue Configuration for tt_news');
+
 
    # ----- # ----- # ----- # ----- # ----- # ----- # ----- # ----- # ----- #
 
